# Labb_YT

./: .gitignore  README.md  api.py  explorations.ipynb  ingestion_md.py  local.settings.json  main.py  pyproject.toml
backend/: data_models.py  rag.py
data/transcripts.lance/_transactions/: 0-80635810-f6c3-4b94-8abe-8e10cecdcca0.txn
frontend/: app.py
knowledge_base/transcripts.lance/_transactions/: 0-01dcb784-8845-4e81-ac9a-c059d7a30453.txn  1-24b61985-4783-4733-970b-30e0b4e0d82b.txn  10-132577c0-f560-4948-b853-1316599d1acd.txn  100-c5ca7464-5351-423a-9df6-d9e5c04250ad.txn  101-22b80712-9fb3-47e1-9d04-da742dc9fc88.txn  102-cd408de7-3a74-4f3f-aad9-9e2ed7b395e5.txn  103-f03b4c25-a736-41a0-af3a-b2e79cd6bda6.txn  104-f7268889-818c-4fa0-bcaf-ffda1da449e4.txn  105-f1be0ccc-3131-40e5-9081-9c73d43bf04e.txn  106-329f9ccc-e30f-4332-9cf5-0d8d8c6bc2c6.txn  11-01a56f3c-289b-4596-bd08-c4c6c13bb803.txn  12-0b2a7b62-ff21-43d9-b867-2f28176157dc.txn  13-8ae986cd-106e-44d2-b3e1-11b0c81aca15.txn  14-fd1241bf-03c7-4fcc-8b73-857ffe47984f.txn  15-2932d2a0-b948-4a69-9427-d8a28e2a003b.txn  16-674b2db5-33d7-4256-a0e2-bf9c4c691f48.txn  17-6f848da6-8774-4458-96f3-8dc6089410cf.txn  18-68faf9ba-bbcf-4a28-b8fb-6ad164d09667.txn  19-91766e7c-5f25-4e79-bd6d-4346501037fb.txn  2-b87758f6-f760-4fc6-81a9-8441a2de9d22.txn  20-43ccbe95-3426-4d2a-be89-f8e66df32b59.txn  21-ed9dc97e-32f4-4bfe-b161-82fe563b96b1.txn  22-a2b7c6ca-eeed-4f32-a07c-4e9b49c933bd.txn  23-b0c1632e-8129-4e5f-aaa5-f5b69d2f545f.txn  24-640f4235-ff4b-42b1-a61d-5ee0fb14149f.txn  25-b105e335-be8d-4ad6-8f51-0f6251c0368e.txn  (+81 more)
